--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -14,7 +14,7 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Runner Rankings</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item" href="/overall">Combined</a></li>
-                    <li><a class="dropdown-item" href="/fullgame">Main Game</a></li>
+                    <li><a class="dropdown-item" href="/fullgame">Full Game</a></li>
                     <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Individual Levels</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/thps1/all">THPS1</a></li>
@@ -32,29 +32,33 @@
                 </ul>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Main LBs</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Full Game LBs</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">THPS</a>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Neversoft</a>
                         <ul class="dropdown-menu dropdown-submenu">
                             <li><a class="dropdown-item" href="/thps1/">THPS1</a></li>
                             <li><a class="dropdown-item" href="/thps2/">THPS2</a></li>
                             <li><a class="dropdown-item" href="/thps2x/">THPS2x</a></li>
                             <li><a class="dropdown-item" href="/thps3/">THPS3</a></li>
                             <li><a class="dropdown-item" href="/thps4/">THPS4</a></li>
-                            <li><a class="dropdown-item" href="/thps5/">THPS5</a></li>
-                            <li><a class="dropdown-item" href="/thhd/">THHD</a></li>
-                            <li><a class="dropdown-item" href="/thps12/">THPS1+2</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Not THPS</a>
-                        <ul class="dropdown-menu dropdown-submenu">
                             <li><a class="dropdown-item" href="/thug1/">THUG1</a></li>
                             <li><a class="dropdown-item" href="/thug2/">THUG2</a></li>
                             <li><a class="dropdown-item" href="/thaw/">THAW</a></li>
                             <li><a class="dropdown-item" href="/thp8/">THP8</a></li>
                             <li><a class="dropdown-item" href="/thpg/">THPG</a></li>
-                            <li><a class="dropdown-item" href="/thdj/">THDJ</a></li>
-                            <li><a class="dropdown-item" href="/thugpro/">THUG PRO</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Robomodo</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/ths/">Shred</a></li>
+                            <li><a class="dropdown-item" href="/thhd/">THHD</a></li>
+                            <li><a class="dropdown-item" href="/thps5/">THPS5</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Remasters</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thps12/">THPS1+2</a></li>
+                            <li><a class="dropdown-item" href="/thps34/">THPS3+4</a></li>
                         </ul>
                     </li>
                     <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Handheld</a>
@@ -69,6 +73,13 @@
                             <li><a class="dropdown-item" href="/thp8psp/">THP8 PSP</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Other</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thdj/">THDJ</a></li>
+                            <li><a class="dropdown-item" href="/thugpro/">THUG PRO</a></li>
+                        </ul>
+                    </li>
+                    
                     <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Category Extensions</a>
                         <ul class="dropdown-menu dropdown-submenu">
                             <li><a class="dropdown-item" href="/thpsce/">THPS CE</a></li>
@@ -80,21 +91,26 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">IL LBs</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">THPS</a>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Neversoft</a>
                         <ul class="dropdown-menu dropdown-submenu">
                             <li><a class="dropdown-item" href="/thps1/ils">THPS1</a></li>
                             <li><a class="dropdown-item" href="/thps2/ils">THPS2</a></li>
                             <li><a class="dropdown-item" href="/thps3/ils">THPS3</a></li>
                             <li><a class="dropdown-item" href="/thps4/ils">THPS4</a></li>
-                            <li><a class="dropdown-item" href="/thps12/ils">THPS1+2</a></li>
-                            </ul>
-                    </li>
-                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Not THPS</a>
-                        <ul class="dropdown-menu dropdown-submenu">
                             <li><a class="dropdown-item" href="/thug1/ils">THUG1</a></li>
                             <li><a class="dropdown-item" href="/thug2/ils">THUG2</a></li>
                             <li><a class="dropdown-item" href="/thaw/ils">THAW</a></li>
                             <li><a class="dropdown-item" href="/thpg/ils">THPG</a></li>
+                            </ul>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Remasters</a>
+                        <ul class="dropdown-menu dropdown-submenu">
+                            <li><a class="dropdown-item" href="/thps12/ils">THPS1+2</a></li>
+                            <li><a class="dropdown-item" href="/thps34/ils">THPS3+4</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Other</a>
+                        <ul class="dropdown-menu dropdown-submenu">
                             <li><a class="dropdown-item" href="/thdj/ils">THDJ</a></li>
                         </ul>
                     </li>
@@ -120,7 +136,7 @@
             {% endif %}
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mods</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Approved Mods</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">PARTYMOD</a>
                         <ul class="dropdown-menu dropdown-submenu">
