--- a/srlc/srl/templates/srl/resource_no_exist.html
+++ b/srlc/srl/templates/srl/resource_no_exist.html
@@ -28,10 +28,11 @@
                     <th>Resource Does Not Exist</th>
                 </tr>
                 <tr>
-                    <th>The resource requested does not exist. Please go Back in your web browser and try again. If this was raised in error, please report in the THPS Speedrun Discord.</th>
+                    <th>The resource requested does not exist. Please go Back in your web browser and try again.<br />If this was raised in error, please report in the THPS Speedrun Discord.</th>
                 </tr>
             </thead>
         </table>
+        <br />
         {% include 'srl/footer.html' %}
     </body>
 </html>
