--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -160,6 +160,17 @@
 
             <div class="vr"></div>
 
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community</a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <li><a class="dropdown-item" href="https://www.thpspoint.com" target="_blank">THPSPoint</a></li>
+                    <li><a class="dropdown-item" href="https://www.thpsgoat.com" target="_blank">thpsGoat</a></li>
+                    <li><a class="dropdown-item" href="https://thpsx.com/" target="_blank">THPSX</a></li>
+                </ul>
+            </li>
+
+            <div class="vr"></div>
+
             <li class="nav-item">
                 <a class="nav-link" style="color: red;" href="/tournament">THPS3+4 Tournament</a>
             </li>
