Preliminary update for v3.4
Main fix is optimizing database/ORM entries. Should be a looooooot faster now!

--- a/srlc/srl/templates/srl/leaderboard.html
+++ b/srlc/srl/templates/srl/leaderboard.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="{{ ENV_WEBSITE_KEYWORDS }}">
 
         {% if "/fullgame" in request.path %}
-            <title>{{ game_slug }}} Full Game Leaderboard - {{ ENV_WEBSITE_NAME }}</title>
+            <title>{{ game_slug }} Full Game Leaderboard - {{ ENV_WEBSITE_NAME }}</title>
         {% elif "/all" in request.path %}
             <title>{{ game_slug }} IL Overall Leaderboard - {{ ENV_WEBSITE_NAME }}</title>
         {% else %}
