--- a/srlc/srl/templates/srl/navbar.html
+++ b/srlc/srl/templates/srl/navbar.html
@@ -17,16 +17,29 @@
                     <li><a class="dropdown-item" href="/fullgame">Full Game</a></li>
                     <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Individual Levels</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/thps1/all">THPS1</a></li>
-                            <li><a class="dropdown-item" href="/thps2/all">THPS2</a></li>
-                            <li><a class="dropdown-item" href="/thps3/all">THPS3</a></li>
-                            <li><a class="dropdown-item" href="/thps4/all">THPS4</a></li>
-                            <li><a class="dropdown-item" href="/thps4ce/all">THPS4 CE</a></li>
-                            <li><a class="dropdown-item" href="/thug1/all">THUG1</a></li>
-                            <li><a class="dropdown-item" href="/thug2/all">THUG2</a></li>
-                            <li><a class="dropdown-item" href="/thaw/all">THAW</a></li>
-                            <li><a class="dropdown-item" href="/thps12/all">THPS1+2</a></li>
-                            <li><a class="dropdown-item" href="/thps12ce/all">THPS1+2 CE</a></li>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Neversoft</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="/thps1/all">THPS1</a></li>
+                                    <li><a class="dropdown-item" href="/thps2/all">THPS2</a></li>
+                                    <li><a class="dropdown-item" href="/thps3/all">THPS3</a></li>
+                                    <li><a class="dropdown-item" href="/thps4/all">THPS4</a></li>
+                                    <li><a class="dropdown-item" href="/thug1/all">THUG1</a></li>
+                                    <li><a class="dropdown-item" href="/thug2/all">THUG2</a></li>
+                                    <li><a class="dropdown-item" href="/thaw/all">THAW</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Remasters</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="/thps12/all">THPS1+2</a></li>
+                                    <li><a class="dropdown-item" href="/thps34/all">THPS3+4</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Category Extensions</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="/thps4ce/all">THPS4 CE</a></li>
+                                    <li><a class="dropdown-item" href="/thps12ce/all">THPS1+2 CE</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -79,7 +92,6 @@
                             <li><a class="dropdown-item" href="/thugpro/">THUG PRO</a></li>
                         </ul>
                     </li>
-                    
                     <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">Category Extensions</a>
                         <ul class="dropdown-menu dropdown-submenu">
                             <li><a class="dropdown-item" href="/thpsce/">THPS CE</a></li>
